--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card mb-4">
-                            <img src="baldurs.jpg" class="card-img-top" alt="Featured Game 3">
+                            <img src="baldurgate.jpg" class="card-img-top" alt="Featured Game 3">
                             <div class="card-body">
                                 <h5 class="card-title">Bladur's Gate 3</h5>
                                 <p class="card-text">A must-play strategy game.</p>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="action.jpg" class="card-img-top" alt="Action Games">
+                        <img src="action2.jpg" class="card-img-top" alt="Action Games">
                         <div class="card-body">
                             <h5 class="card-title">Action Games</h5>
                             <p class="card-text">Experience fast-paced and thrilling action-packed games.</p>
