--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="rpg.jpg" class="card-img-top" alt="RPG Games">
+                        <img src="rpg2.jpg" class="card-img-top" alt="RPG Games">
                         <div class="card-body">
                             <h5 class="card-title">RPG Games</h5>
                             <p class="card-text">Dive into immersive role-playing experiences.</p>
