--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img src="rpg2.jpg" class="card-img-top" alt="RPG Games">
                         <div class="card-body">
                             <h5 class="card-title">RPG Games</h5>
-                            <p class="card-text">Dive into immersive role-playing experiences.</p>
+                            <p class="card-text">Dive into immersive role-playing experiences with stunning graphics.</p>
                         </div>
                     </div>
                 </div>
